# rules_ls_lint

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
example/: .ls-lint.yml  BUILD.bazel  WORKSPACE
example/test/: BUILD.bazel
internal/: BUILD.bazel
internal/language/: BUILD.bazel
internal/language/ls_lint_filegroup/: BUILD.bazel  lang.go
pkg/: BUILD.bazel  ls_lint.bzl
