load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ls-lint/rules_ls_lint
gazelle(name = "gazelle")

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "darmin_amd64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "ls_lint",
    actual = select({
        ":darwin_arm64": "@com_github_loeffel_io_ls_lint_darwin_arm64//file:ls-lint",
        "//conditions:default": "@com_github_loeffel_io_ls_lint_linux_amd64//file:ls-lint",
    }),
    visibility = ["//visibility:public"],
)
